fix: re-add legacy styles to fix breaks on active branchs

--- a/src/styles/variables/_borders.scss
+++ b/src/styles/variables/_borders.scss
@@ -1,2 +1,5 @@
 $radius-primary: 16px;
 $radius-secondary-top: 8px 8px 0 0;
+
+// Legacy
+$radius: 16px;
