--- a/src/styles/variables/_typography.scss
+++ b/src/styles/variables/_typography.scss
@@ -13,3 +13,8 @@ $font-weight-regular: 400;
 $font-weight-medium: 500;
 $font-weight-demi-bold: 600;
 $font-weight-bold: 700;
+
+// Legacy styles
+$size-default: 16px;
+$size-small: 14px;
+$size-tiny: 12px;
